fix(i18n): add translations for MiniDevTools component

--- a/frontend/src/i18n/locales/en/tasks.json
+++ b/frontend/src/i18n/locales/en/tasks.json
@@ -148,6 +148,25 @@
     },
     "urlInput": {
       "placeholder": "Enter URL..."
+    },
+    "devTools": {
+      "title": "DevTools",
+      "expandAriaLabel": "Expand DevTools",
+      "collapseAriaLabel": "Collapse DevTools",
+      "clearAriaLabel": "Clear current tab",
+      "summary": "Console ({{consoleCount}}) · Network ({{networkCount}}) · Errors ({{errorCount}})",
+      "tabs": {
+        "console": "Console ({{count}})",
+        "network": "Network ({{count}})",
+        "errors": "Errors ({{count}})"
+      },
+      "clear": "Clear",
+      "empty": {
+        "console": "No console logs",
+        "network": "No network requests",
+        "errors": "No errors"
+      },
+      "networkError": "Error: {{error}}"
     }
   },
   "diff": {
