--- a/frontend/src/i18n/locales/es/tasks.json
+++ b/frontend/src/i18n/locales/es/tasks.json
@@ -365,6 +365,25 @@
     "urlInput": {
       "placeholder": "Ingresar URL..."
     },
+    "devTools": {
+      "title": "DevTools",
+      "expandAriaLabel": "Expand DevTools",
+      "collapseAriaLabel": "Collapse DevTools",
+      "clearAriaLabel": "Clear current tab",
+      "summary": "Console ({{consoleCount}}) · Network ({{networkCount}}) · Errors ({{errorCount}})",
+      "tabs": {
+        "console": "Console ({{count}})",
+        "network": "Network ({{count}})",
+        "errors": "Errors ({{count}})"
+      },
+      "clear": "Clear",
+      "empty": {
+        "console": "No console logs",
+        "network": "No network requests",
+        "errors": "No errors"
+      },
+      "networkError": "Error: {{error}}"
+    },
     "noServer": {
       "companionLink": "Ver guía de instalación",
       "companionPrompt": "Para la funcionalidad de clic y editar, agrega el complemento del navegador a tu proyecto.",
