--- a/frontend/src/i18n/locales/ja/tasks.json
+++ b/frontend/src/i18n/locales/ja/tasks.json
@@ -363,6 +363,25 @@
     "urlInput": {
       "placeholder": "URLを入力..."
     },
+    "devTools": {
+      "title": "DevTools",
+      "expandAriaLabel": "Expand DevTools",
+      "collapseAriaLabel": "Collapse DevTools",
+      "clearAriaLabel": "Clear current tab",
+      "summary": "Console ({{consoleCount}}) · Network ({{networkCount}}) · Errors ({{errorCount}})",
+      "tabs": {
+        "console": "Console ({{count}})",
+        "network": "Network ({{count}})",
+        "errors": "Errors ({{count}})"
+      },
+      "clear": "Clear",
+      "empty": {
+        "console": "No console logs",
+        "network": "No network requests",
+        "errors": "No errors"
+      },
+      "networkError": "Error: {{error}}"
+    },
     "noDevScript": "開発スクリプトが設定されていません",
     "noDevScriptHint": "プレビューを有効にするには、プロジェクト設定で開発スクリプトを追加してください。",
     "noServer": {
